Responsive menu fix + alignment
- Menu was broken oO and misaligned!

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,14 @@ body {
   margin: 0;
 }
 
+p, span {margin: 0;}
+
 /* NAVIGATION BAR */
 
 .navbar {
   background-color: #27496d;
   display: flex;
+  max-height: 6rem;
   position: fixed;
   width: 100%;
   z-index: 10;
@@ -63,7 +66,6 @@ body {
 }
 
 .quote {
-  color: #dae1e7;
   font-family: 'Saira Extra Condensed', sans-serif;
   font-size: 3.125vw; /* 3.125vw = 300% = 3rem*/
   letter-spacing: 0.2rem;
@@ -71,17 +73,13 @@ body {
 }
 
 .quote-author {
-  color: #dae1e7;
-  font-family: 'Saira Semi Condensed', sans-serif;
   font-size: 1rem;
   margin: 0;
 }
 
 .text-top {
-  color: #dae1e7;
-  font-weight: 400;
   max-width: 25rem;
-  padding-top: 7%;
+  padding-top: 9%;
   /*position: absolute;
   left: 35vh - 71% - 35rem*/
 }
@@ -106,7 +104,6 @@ body {
 /* AUTHOR */
 
 .div-author {
-  background-color: #dae1e7;
   min-height: 29rem;
   display: block;
   padding: 4.5rem 17% 0 16%;
@@ -125,7 +122,6 @@ body {
 
 .text-author {
   color: #515585;
-  font-weight: 400;
 }
 
 
@@ -148,9 +144,7 @@ body {
 .foot {
   background-color: #27496d;
   font-size: 1rem;
-  line-height: 0.35;
-  max-height: 2.5rem;
-  overflow: hidden;
+  margin: 0;
   text-align: center;
 }
 
@@ -163,14 +157,14 @@ body {
 
 @media screen and (max-width: 1200px) {
   .div-bottom {padding: 0;}
-  .foot {display: none;}
+  .foot-rights {display: none;}
   .icon {display:inline;}
   .image-top {margin-left: 0; position: static;}
   .nav-link {display: none;}
   .navbar-menu {margin-left: 10%; padding-top: 1.25rem; position: static;}
-  .navbar-menu .responsive {position: relative;}
-  .navbar-menu .responsive .icon {position: absolute; left: 100%; top: 1.25rem;}
-  .navbar-menu .responsive .nav-link {background-color: #27496d; display: block; padding: 0 1rem;}
+  .navbar-menu.responsive {position: relative;}
+  .navbar-menu.responsive .icon {position: absolute; left: 100%; top: 1.25rem;}
+  .navbar-menu.responsive .nav-link {background-color: #27496d; display: block; padding: 0 1rem;}
 }
 
 @media screen and (max-width: 640px) {
@@ -181,9 +175,9 @@ body {
   .div-top {padding-top: 35%}
   .navbar-brand {margin-top: 1.75rem; max-width: 9rem;}
   .navbar-menu {margin-left: 6%;}
-  .navbar-menu .responsive {margin-top: 0.5rem; position: relative; right: 8.7rem;}
-  .navbar-menu .responsive .icon {position: absolute; right: 20%; top: 0.75rem;}
-  .navbar-menu .responsive .nav-link {background-color: #27496d; display: block; text-align: left;}
+  .navbar-menu.responsive {margin-top: 0.5rem; position: relative; right: 29%;}
+  .navbar-menu.responsive .icon {position: absolute; right: 5%; top: 0.75rem;}
+  .navbar-menu.responsive .nav-link {background-color: #27496d; display: block; text-align: left;}
   .quote {font-size: 1.5rem;}
   .quote-author {font-size: .5rem; padding-bottom: 15%}
 }
